--- a/app/src/part/footer.html
+++ b/app/src/part/footer.html
@@ -8,13 +8,13 @@
 		<div class="footer-info">	
 			<div class="footer-logo">
 				<img src="./img/footer/logo.png" alt="logo">
-				<p>让医疗触手可及 I Make healthcare closer</p>
+				<!-- <p>让医疗触手可及 I Make healthcare closer</p> -->
 				<p class="tel">咨询热线 400 600 0990</p>
 			</div>
 
 			<div class="footer-linkus">
 				<h5>联系我们</h5>
-				<p><label>企业邮箱：</label>drelephant@dr-elefant.com.cn</p>
+				<!-- <p><label>企业邮箱：</label>drelephant@dr-elefant.com.cn</p> -->
 				<p><label>企业邮箱：</label>drelephant@dr-elefant.com.cn</p>
 				<p><label>公司地址：</label>上海市静安区灵石路697号健康智谷8号楼304</p>
 			</div>
@@ -27,7 +27,7 @@
 
 			<div class="footer-qrcode">
 				<div class="footer-qrcode-block">
-					<img src="./img/footer/weixin.png" alt="微博">
+					<img src="./img/footer/weixin.png" alt="微信">
 					<p>微信扫一扫</p>
 				</div>
 				<div class="footer-qrcode-block">
