--- a/app/src/part/guarantee.html
+++ b/app/src/part/guarantee.html
@@ -18,9 +18,9 @@
 		<p>我们采用远程影像诊断的方式托管合作医疗机构放射科，无固定成本，费用较低。</p>
 	</div>
 	<div class="guarantee-block">
-		<img src="./img/index/icon-quality.png">
+		<img src="./img/index/icon-security.png">
 		<h3>安全保证</h3>
-		<label>Quality Assurance</label>
+		<label>Security Assurance</label>
 		<p>我们通过购买第三方责任险的方式为合作医疗机构提供安全保障</p>
 	</div>
 </div>
