--- a/app/src/case.html
+++ b/app/src/case.html
@@ -8,18 +8,27 @@
 <body class="case">
 	@@include('./part/header.html')
 	
-	<div class="container">
+	<div class="container" v-cloak>
 		<div class="case-detail">
 			<div class="case-detail-header">
 				<h3>{{ caseInfo.title }}</h3>
 				<p>{{ caseInfo.time }}</p>
 			</div>
-			<div class="case-img">
-				<img src="./img/case.png" alt="">
-				<img src="./img/case.png" alt="">
+			<div class="swiper-container case-img" v-cloak>
+			  <div class="swiper-wrapper">
+			    <div v-for="item in caseInfo.img" class="swiper-slide">
+			    	<img :src="imgUrl + item.imgPath">
+			    </div>
+			  </div>
+			  <!-- 如果需要导航按钮 -->
+			  <div class="swiper-button-prev"></div>
+			  <div class="swiper-button-next"></div>
 			</div>
 			<div class="case-detail-content" v-html="caseInfo.content"></div>
 		</div>
+
+		<div @click="goPage(caseInfo.prevId)" v-if="caseInfo.prevId" class="case-prev"></div>
+		<div @click="goPage(caseInfo.nextId)" v-if="caseInfo.nextId" class="case-next"></div>
 	</div>
 
 	@@include('./part/footer.html')
@@ -31,24 +40,87 @@
 		  el: '.container',
 		  data () {
 		  	return {
+		  		imgUrl: imgUrl,
 		  		caseInfo: {
-		  			title: "大象医生银川店远程视频病例展示",
-		  			time: "2017年10月27日 18:00:01",
-		  			img1: "",
-		  			img2: "",
+		  			prevId: '',
+		  			nextId: '',
+		  			title: "测试",
+		  			time: "2017/01/01 12:16:00",
+		  			img: [
+		  				'./img/case/case.png'
+		  			],
 		  			content: "<p>2017年3月19日，银川市人民政府与上海大象医疗健康科技有限公司(以下简称“大象医生”)在银川正式签约，双方共同建设“大象医生互联网医院”。据悉，在银川市政府的指导下，大象医生将快速推动银川互联网医院落地，建设立足银川、覆盖全国，拥有线下医疗机构和健康数据支撑的医疗资源平台和专业远程医疗平台。值得注意的是，大象医生由国内领先的医疗健康投资集团天亿投资发起，中国体检及医疗服务A股上市企业美年大健康产业控股股份有限公司(以下简称“美年大健康”)投资参股，是美年大健康生态体系的核心成员之一。</p><p>2016年是互联网医院发展元年，全国各区域各医疗机构都在不断尝试互联网医院的探索与实践，但是发展现状参差不齐。随着2016年全国卫计工作会议的结束，明确提出大力发展健康产业，尤其银川作为互联网医疗产业集聚地，在相关配套政策的支持与保障下，互联网医院的落地对医疗生态体系的建设及分级诊疗的推进、控费效果的显现都具有积极意义。</p><p>据悉，大象医生互联网医院将公立医疗机构(大医院和基层医院)、美年大健康的网络和医生(专科医生和全科医生)连接起来，建立网上医联体，并针对初诊患者、已确诊的慢性病患者、重症需转诊的患者、出院随访和远程复诊的患者的不同情况采取不同的服务流程。</p><p>大象医生CEO芶正猛表示：“立足美年大健康生态圈的优势和上市公司覆盖全国的体检中心网络，大象医生旨在发挥‘互联网+’的优势，将这些资源和群众连接，围绕检查诊断的关键环节实现合理范围内的分级诊疗。”</p><p>据了解，大象医生互联网医院将成为一个集健康大数据收集、健康教育、健康管理、网上诊疗为一体的远程医疗服务与协同平台，能实现门诊、住院、检查、体检的预约服务，并能针对特定人群、特定病种实现规定范围内的网上诊疗活动。</p><p>天亿投资集团、美年大健康董事长俞熔指出，大象医生互联网医院的远程影像中心、远程会诊中心和银川美年大健康高端健康管理中心的协同合作，是助力宁夏区域医疗服务水平、探索国家分级诊疗的重大举措，必将立足宁夏、辐射全国。</p><p>截止至目前，美年大健康的生态体系已覆盖专科连锁、远程医疗、基因检测、健康大数据、健康管理、中医药产业、医养康健等系列生态公司。</p>"
 		  		} 
 		  	}
 		  },
+		  computed: {
+		  	caseId () {
+		  		let query = this.parseToJson(location.search);
+		  		return query.id;
+		  	}
+		  },
+		  mounted () {
+		  	this.fetchData();
+		  },
+		  updated () {
+		  	var swiper = new Swiper ('.swiper-container', {
+			    // loop: true,
+			    nextButton: '.swiper-button-next',
+			    prevButton: '.swiper-button-prev',
+			    slidesPerView : 2,
+					slidesPerGroup : 1,
+			  }) 
+		  },
 		  methods: {
-		  	getNewsFlash () {
-
+		  	parseToJson (url) {
+					if(url != "" && url.indexOf("?") != -1){
+						let	url_json = {};
+						url = url.replace("#/author", "");
+						url = url.split("?");
+						url = url[1].split('&');
+						for (let i = 0; i<url.length ; i++) {
+					    let str = url[i].split('=');
+					    url_json[str[0]]=str[1];
+						}
+						return url_json;
+					} else {
+						return "";
+					}
+				},
+		  	fetchData () {
+		  		let _this = this;
+		  		$.ajax({
+				    url: apiUrl + "caseDetail",
+				    type: "POST",
+				    data: {
+				    	id: _this.caseId
+				    },
+				    dataType: 'json',
+				    success: function(e) {
+				    	if(e.code == 1){
+				    		let res = e.data;
+				    		_this.caseInfo = {
+				    			prevId: res.previouId,
+					  			nextId: res.nextId,
+					  			title: res.title,
+					  			time: res.createDate,
+					  			img: res.imglist,
+					  			content: res.detail
+				    		};
+			  			}
+				    },
+				    error: function(jqXHR, textStatus, errorMsg){
+			        // alert("请求失败：" + errorMsg);
+				    }
+					});
 		  	},
 		  	goPage (data) {
-		  		// 
+		  		location.href = 'case.html?id=' + data;
 		  	}
 		  }
 		});
+
+		
 	})();
 </script>
 </body>
