--- a/app/src/part/head.html
+++ b/app/src/part/head.html
@@ -5,6 +5,10 @@
 	<meta name="apple-mobile-web-app-status-bar-style" content="black">
 	<meta name="apple-mobile-web-app-title" content="Your title">
 	<meta name="format-detection" content="telephone=no">
+	<!-- 优先选择内核版本 -->
+	<!-- <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> -->
+	<meta name="renderer" content="webkit"> 
+	<!-- 国内双内核处理方案 -->
 	<link rel="stylesheet" type="text/css" href="./lib/swiper/dist/css/swiper.min.css">
 	<!-- build:css css/common.css -->
 	<link rel="stylesheet" type="text/css" href="./css/common.css">
@@ -12,4 +16,9 @@
 	<script src="./lib/jquery/dist/jquery.min.js"></script>
 	<script src="./lib/swiper/dist/js/swiper.jquery.min.js"></script>
 	<script src="./lib/vue/dist/vue.js"></script>
+	<script src="./lib/page/paging.js"></script>
+	<script>
+		var apiUrl = 'http://hive.10-suns.com:89/drback/api/',
+				imgUrl = 'http://hive.10-suns.com:89/dres/';
+	</script>
 </head>
